<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.pengx.test.espresso.MainActivity">


    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:hint="输入账号"
              android:id="@+id/et_account"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:hint="输入密码"
              android:id="@+id/et_password"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btn_recyclerview"
            android:text="RecyclerView"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btn_webview"
            android:text="WebView"/>

</LinearLayout>
